Add logback file and configuration with application fileé

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+# ===============================
+# TOMCAT
+# ===============================
 
+server.port=8081
+#server.servlet.context-path=/
+server.servlet.context-path=/logging-app
+
+
+# ==============================================================
+# = logging
+# ==============================================================
+
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
+logging.level.net.guides=DEBUG
+
+logging.level.root=info
