--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,12 +2,12 @@
 # = logging
 # ==============================================================
 
-log.file.name.path=../logs/
+log.file.name.path=../logs
 log.file.name.pattern=@project.artifactId@-application.%d{yyyy-MM-dd}-application.log
 
 log.file.name=${log.file.name.path}${log.file.name.pattern}
 
-
+app.logging.file.name = ${log.file.name.path}/dev/@project.artifactId@-application.
 
 # Logging pattern for the console
 logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlight(%-5level) %logger.%M - %msg%n
