--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,13 @@ logging.level.org.hibernate=ERROR
 logging.level.net.guides=DEBUG
 
 logging.level.root=info
+
+app.logging.name = @project.artifactId@-app
+app.logging.profile = @spring.profiles.active@
+
+# ==============================================================
+# = profiles
+# ==============================================================
+
+filter.mode=@filter.mode@
+spring.profiles.active=@spring.profiles.active@, @filter.mode@
