use log4j2 by excluding logging from spring boot starter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,9 @@ logging.level.root=info
 app.logging.name = @project.artifactId@-app
 app.logging.profile = @spring.profiles.active@
 
+#To enable asynchronous logging, we need to include disruptor and enable contextSelector property
+log4j2.contextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector
+
 # ==============================================================
 # = profiles
 # ==============================================================
